link color contrast fix

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -9,7 +9,7 @@
   :root {
     --bg-color: #fbf0df;
     --text-color: #14151a;
-    --link-color: #75c3ff;
+    --link-color: #006bb8;
     --shadow-color: #cfcbbc;
   }
 }
@@ -55,6 +55,7 @@ button {
 h1 {
   font-size: 2.5rem;
   text-shadow: 0.5rem 0.5rem var(--shadow-color);
+  text-align: center;
 }
 
 p {
